--- a/app/src/main/res/layout/include_bottom_nav.xml
+++ b/app/src/main/res/layout/include_bottom_nav.xml
@@ -1,104 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minHeight="@dimen/nav_height"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:navi="http://schemas.android.com/apk/res-auto"
     >
 
-    <LinearLayout
-        android:id="@+id/nav_home"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        >
-        <ImageView
-            android:id="@+id/nav_home_icon"
-            android:layout_width="@dimen/nav_icon_size"
-            android:layout_height="@dimen/nav_icon_size"
-            />
+    <data>
+        <variable
+            name="naviModel"
+            type="cn.jsjst.reimbursement.base.NavModel" />
+    </data>
 
-        <TextView
-            android:id="@+id/nav_home_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/nav_txt_size"
-            android:textColor="@color/color_state_list_nav_txt"
-            />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/nav_height"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/nav_home"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:onClick="@{naviModel::onHomeTabClick}"
+            >
+
+            <ImageView
+                android:id="@+id/nav_home_icon"
+                android:layout_width="@dimen/nav_icon_size"
+                android:layout_height="@dimen/nav_icon_size"
+                navi:icon="@{naviModel.isHomeChecked?@drawable/ic_launcher:@drawable/ic_launcher_round}" />
+
+            <TextView
+                android:id="@+id/nav_home_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/nav_icon_txt_margin"
+                android:textColor="@{naviModel.isHomeChecked?@color/colorPrimary:@color/colorAccent}"
+                android:textSize="@dimen/nav_txt_size"
+                android:text="首页"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/nav_infos"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:onClick="@{naviModel::onApplyListTabClick}"
+            >
+
+            <ImageView
+                android:layout_width="@dimen/nav_icon_size"
+                android:layout_height="@dimen/nav_icon_size"
+                navi:icon="@{naviModel.isApplyListChecked?@drawable/ic_launcher:@drawable/ic_launcher_round}"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/nav_icon_txt_margin"
+                android:textColor="@{naviModel.isApplyListChecked?@color/colorPrimary:@color/colorAccent}"
+                android:textSize="@dimen/nav_txt_size"
+                android:text="审批"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/center_operate"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:onClick="@{naviModel::onShortCutClick}"
+            >
+
+            <ImageView
+                android:layout_width="@dimen/nav_height"
+                android:layout_height="@dimen/nav_height"
+                android:src="@mipmap/ic_launcher_round"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/nav_chart"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:onClick="@{naviModel::onChartTabClick}">
+
+            <ImageView
+                android:layout_width="@dimen/nav_icon_size"
+                android:layout_height="@dimen/nav_icon_size"
+                navi:icon="@{naviModel.isChartChecked? @drawable/ic_launcher : @drawable/ic_launcher_round}"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/nav_icon_txt_margin"
+                android:textColor="@{naviModel.isChartChecked?@color/colorPrimary:@color/colorAccent}"
+                android:textSize="@dimen/nav_txt_size"
+                android:text="帐表"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/nav_mine"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:onClick="@{naviModel::onMineTabClick}"
+            >
+
+            <ImageView
+                android:layout_width="@dimen/nav_icon_size"
+                android:layout_height="@dimen/nav_icon_size"
+                navi:icon="@{naviModel.isMineChecked?@drawable/ic_launcher:@drawable/ic_launcher_round}"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/nav_icon_txt_margin"
+                android:textColor="@{naviModel.isMineChecked?@color/colorPrimary:@color/colorAccent}"
+                android:textSize="@dimen/nav_txt_size"
+                android:text="我的"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/nav_infos"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:layout_width="@dimen/nav_icon_size"
-            android:layout_height="@dimen/nav_icon_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/nav_txt_size"
-            android:textColor="@color/color_state_list_nav_txt"
-            />
+</layout>
 
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/center_operate"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        >
-        <ImageView
-            android:layout_width="@dimen/nav_height"
-            android:layout_height="@dimen/nav_height" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/nav_chart"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:layout_width="@dimen/nav_icon_size"
-            android:layout_height="@dimen/nav_icon_size"
-
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/nav_txt_size"
-            android:textColor="@color/color_state_list_nav_txt"
-            />
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/nav_mine"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:layout_width="@dimen/nav_icon_size"
-            android:layout_height="@dimen/nav_icon_size"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/nav_txt_size"
-            android:textColor="@color/color_state_list_nav_txt"
-            />
-
-    </LinearLayout>
-
-</LinearLayout>
