--- a/app/src/main/res/layout/include_bottom_nav.xml
+++ b/app/src/main/res/layout/include_bottom_nav.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="naviModel"
-            type="cn.jsjst.reimbursement.base.NavModel" />
+            type="cn.jsjst.reimbursement.component.base.NavModel" />
     </data>
 
 
