--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="color_tab_unselected_txt">#E6E6E6</color>
+    <color name="color_tab_unselected_txt">#cccccc</color>
 
 
 </resources>
