--- a/app/src/main/res/layout/fragment_apply_approval_sub.xml
+++ b/app/src/main/res/layout/fragment_apply_approval_sub.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="sub apply list fragment"
-        />
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/apply_list_recycler"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+   </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
