添加申请布局文件

--- a/app/src/main/res/layout/item_apply_approval.xml
+++ b/app/src/main/res/layout/item_apply_approval.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="itemModel"
-            type="cn.jsjst.reimbursement.component.applylist.ItemModelView" />
+            type="cn.jsjst.reimbursement.component.applylist.ItemViewModel" />
     </data>
 
     <RelativeLayout
