公务事前申请信息页面布局

--- a/app/src/main/res/layout/activity_business_traval_apply_info.xml
+++ b/app/src/main/res/layout/activity_business_traval_apply_info.xml
@@ -132,7 +132,7 @@
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:background="@drawable/bg_next_btn_enable"
+                android:background="@drawable/bg_next_btn"
                 />
         </RelativeLayout>
 
