--- a/app/src/main/res/layout/activity_business_travel_apply_address_time.xml
+++ b/app/src/main/res/layout/activity_business_travel_apply_address_time.xml
@@ -174,7 +174,7 @@
                 android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
                 android:layout_alignParentRight="true"
                 android:gravity="center"
-                android:background="@drawable/bg_next_btn_enable"
+                android:background="@drawable/bg_next_btn"
                 />
 
 
