--- a/app/src/main/res/layout/activity_public_service_reimb_base_info.xml
+++ b/app/src/main/res/layout/activity_public_service_reimb_base_info.xml
@@ -17,19 +17,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_public_service_apply_project_txt"
+                android:id="@+id/title_public_service_reimb_project_txt"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:textColor="@color/color_black_title"
                 android:text="@string/title_public_service_apply_project"
-                android:layout_alignBaseline="@id/content_public_service_apply_project"
+                android:layout_alignBaseline="@id/content_public_service_reimb_project"
                 />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/content_public_service_apply_project"
+                android:id="@+id/content_public_service_reimb_project"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
-                android:layout_toRightOf="@id/title_public_service_apply_project_txt"
+                android:layout_toRightOf="@id/title_public_service_reimb_project_txt"
                 android:layout_marginLeft="@dimen/apply_title_content_margin"
                 android:textSize="@dimen/custom_apply_content_text_size"
                 />
@@ -37,9 +37,9 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/content_public_service_apply_depart_edit"
-                android:layout_below="@id/content_public_service_apply_project"
-                android:layout_alignLeft="@id/content_public_service_apply_project"
+                android:id="@+id/content_public_service_reimb_depart_edit"
+                android:layout_below="@id/content_public_service_reimb_project"
+                android:layout_alignLeft="@id/content_public_service_reimb_project"
                 android:textSize="@dimen/custom_apply_content_text_size"
                 android:textColor="@color/color_black_content"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
@@ -49,8 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/title_public_service_apply_depart_txt"
-                android:layout_below="@id/content_public_service_apply_project"
-                android:layout_alignBaseline="@id/content_public_service_apply_depart_edit"
+                android:layout_below="@id/content_public_service_reimb_project"
+                android:layout_alignBaseline="@id/content_public_service_reimb_depart_edit"
                 android:textColor="@color/color_black_title"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:text="@string/title_public_service_apply_depart"
@@ -59,9 +59,9 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/content_public_service_apply_time_edit"
-                android:layout_below="@id/content_public_service_apply_depart_edit"
-                android:layout_alignLeft="@id/content_public_service_apply_depart_edit"
+                android:id="@+id/content_public_service_reimb_time_edit"
+                android:layout_below="@id/content_public_service_reimb_depart_edit"
+                android:layout_alignLeft="@id/content_public_service_reimb_depart_edit"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
                 android:textColor="@color/color_black_content"
                 android:textSize="@dimen/custom_apply_content_text_size"
@@ -70,9 +70,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_public_service_apply_time_txt"
-                android:layout_below="@id/content_public_service_apply_depart_edit"
-                android:layout_alignBaseline="@id/content_public_service_apply_time_edit"
+                android:id="@+id/title_public_service_reimb_time_txt"
+                android:layout_below="@id/content_public_service_reimb_depart_edit"
+                android:layout_alignBaseline="@id/content_public_service_reimb_time_edit"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:textColor="@color/color_black_title"
                 android:text="@string/title_public_service_apply_reception_time"
@@ -82,8 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/content_public_service_received_depart_edit"
-                android:layout_below="@id/content_public_service_apply_time_edit"
-                android:layout_alignLeft="@id/content_public_service_apply_time_edit"
+                android:layout_below="@id/content_public_service_reimb_time_edit"
+                android:layout_alignLeft="@id/content_public_service_reimb_time_edit"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
                 android:textSize="@dimen/custom_apply_content_text_size"
                 android:textColor="@color/color_black_content"
@@ -92,10 +92,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_public_service_apply_received_depart_txt"
+                android:id="@+id/title_public_service_reimb_received_depart_txt"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:textColor="@color/color_black_title"
-                android:layout_below="@id/content_public_service_apply_time_edit"
+                android:layout_below="@id/content_public_service_reimb_time_edit"
                 android:layout_alignBaseline="@id/content_public_service_received_depart_edit"
                 android:text="@string/title_public_service_apply_received_depart"
                 />
@@ -103,7 +103,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/content_public_service_apply_reception_address_edit"
+                android:id="@+id/content_public_service_reimb_reception_address_edit"
                 android:layout_below="@id/content_public_service_received_depart_edit"
                 android:layout_alignLeft="@id/content_public_service_received_depart_edit"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
@@ -113,9 +113,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_public_service_apply_reception_address_txt"
+                android:id="@+id/title_public_service_reimb_reception_address_txt"
                 android:layout_below="@id/content_public_service_received_depart_edit"
-                android:layout_alignBaseline="@id/content_public_service_apply_reception_address_edit"
+                android:layout_alignBaseline="@id/content_public_service_reimb_reception_address_edit"
                 android:textColor="@color/color_black_title"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:text="@string/title_public_service_apply_reception_address"
@@ -124,9 +124,9 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/custom_apply_text_area_height"
-                android:id="@+id/content_public_service_apply_content_edit"
-                android:layout_below="@id/content_public_service_apply_reception_address_edit"
-                android:layout_alignLeft="@id/content_public_service_apply_reception_address_edit"
+                android:id="@+id/content_public_service_reimb_content_edit"
+                android:layout_below="@id/content_public_service_reimb_reception_address_edit"
+                android:layout_alignLeft="@id/content_public_service_reimb_reception_address_edit"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
                 android:textSize="@dimen/custom_apply_content_text_size"
                 android:textColor="@color/color_black_content"
@@ -134,9 +134,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_public_service_apply_content_txt"
-                android:layout_below="@id/content_public_service_apply_reception_address_edit"
-                android:layout_alignBaseline="@id/content_public_service_apply_content_edit"
+                android:id="@+id/title_public_service_reimb_content_txt"
+                android:layout_below="@id/content_public_service_reimb_reception_address_edit"
+                android:layout_alignBaseline="@id/content_public_service_reimb_content_edit"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:textColor="@color/color_black_title"
                 android:text="@string/title_public_service_apply_reception_content"
@@ -145,9 +145,9 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/custom_apply_text_area_height"
-                android:id="@+id/content_public_service_apply_basis_edit"
-                android:layout_below="@id/content_public_service_apply_content_edit"
-                android:layout_alignLeft="@id/content_public_service_apply_content_edit"
+                android:id="@+id/content_public_service_reimb_basis_edit"
+                android:layout_below="@id/content_public_service_reimb_content_edit"
+                android:layout_alignLeft="@id/content_public_service_reimb_content_edit"
                 android:layout_marginTop="@dimen/custom_apply_item_margin"
                 android:textSize="@dimen/custom_apply_content_text_size"
                 android:textColor="@color/color_black_content"
@@ -155,8 +155,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/content_public_service_apply_content_edit"
-                android:layout_alignBaseline="@id/content_public_service_apply_basis_edit"
+                android:layout_below="@id/content_public_service_reimb_content_edit"
+                android:layout_alignBaseline="@id/content_public_service_reimb_basis_edit"
                 android:textSize="@dimen/custom_apply_title_text_size"
                 android:textColor="@color/color_black_title"
                 android:text="@string/title_public_service_apply_reception_basis"
@@ -165,7 +165,8 @@
             <TextView
                 android:layout_width="@dimen/custom_apply_next_btn_width"
                 android:layout_height="@dimen/custom_apply_next_btn_height"
-                android:layout_below="@id/content_public_service_apply_basis_edit"
+                android:id="@+id/next_btn"
+                android:layout_below="@id/content_public_service_reimb_basis_edit"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
                 android:textSize="@dimen/custom_apply_next_btn_text_size"
